--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,10 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+# Rar & Zip
+.rar
+*.rar
+.zip
+*.zip
+
 # End of https://www.toptal.com/developers/gitignore/api/node,git
