--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ausbildungsnachweisschreiber",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "pdf-filler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^3.3.1",
     "pdf-lib": "^1.17.1",
-    "pdffiller": "^0.0.11"
+    "pdffiller": "^0.0.11",
+    "readline": "^1.3.0"
   }
 }
