--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "WlanKabL",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "child_process": "^1.0.2",
     "date-fns": "^3.3.1",
     "pdf-lib": "^1.17.1",
     "pdffiller": "^0.0.11",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "webuntis": "^2.0.3"
   }
 }
